ajoute bootstrap material design

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,10 +12,20 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- bootstrap Material core CSS -->
+    <link href="../../../node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Custom styles -->
     <link href="./content/css/footer.css" rel="stylesheet">
 
+    <!-- JQuery -->
+    <script src="../../../node_modules/jquery/dist/jquery.min.js"></script>
+    <!-- Bootstrap core JS -->
+    <script src="../../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- bootstrap Material core JS -->
+    <script src="../../../node_modules/bootstrap-material-design/dist/js/material.min.js"></script>
+    <!-- Init bootstrap material js -->
+    <script>$.material.init();</script>
 
   </head>
 
@@ -67,8 +77,6 @@
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../../node_modules/bootstrap/dist/js/bootstrap.min.css"></script>
-    <script src="../../../node_modules/jquery/dist/jquery.min.css"></script>
 
 
 </body>
