--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
   <link href="../../../node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.min.css" rel="stylesheet">
 
   <!-- Custom styles -->
-  <link href="./content/css/footer.css" rel="stylesheet">
+  <link href="./content/css/main.css" rel="stylesheet">
 
   <!-- JQuery -->
   <script src="../../../node_modules/jquery/dist/jquery.min.js"></script>
@@ -32,7 +32,7 @@
 <body>
 
   <!-- Begin page content -->
-  <div class="container-fluid">
+  <div class="container-fluid page-content">
     <div class="row">
       <!-- col 1 -->
       <div class="col-sm-6" >
@@ -66,17 +66,15 @@
         </div>
         <!-- / Stock search -->
         <!-- Possessed stock -->
-        <div class="">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <h3>Actions possédées</h3>
-              <hr/>
-              <table class="table table-hover">
-                <tr><td>yolo</td></tr>
-                <tr><td>yolo</td></tr>
-                <tr><td>yolo</td></tr>
-              </table>
-            </div>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h3>Actions possédées</h3>
+            <hr/>
+            <table class="table table-hover">
+              <tr><td>yolo</td></tr>
+              <tr><td>yolo</td></tr>
+              <tr><td>yolo</td></tr>
+            </table>
           </div>
         </div>
         <!-- / Possessed stock -->
@@ -103,10 +101,6 @@
             Etiam euismod eu augue quis consequat. Duis dui ante, euismod vestibulum diam non, eleifend consequat sapien. Nam euismod condimentum vehicula. Nullam maximus elit finibus nisl tempus mattis. Nullam mattis, neque sed lobortis tempor, eros velit laoreet quam, id sollicitudin velit ligula semper libero. Praesent nec tortor quis elit ornare egestas. Sed vel turpis odio. Proin sagittis lectus quis arcu malesuada, sit amet suscipit metus elementum. Vivamus non diam quis velit tempus dictum ut et ex. Donec tincidunt vehicula mauris. Maecenas mi enim, laoreet maximus orci id, egestas pretium enim. Curabitur non porta neque. Sed ornare dapibus elit. Ut rhoncus in libero a aliquam. Nam feugiat enim in mi tempor molestie.
 
             Suspendisse potenti. Fusce vitae nunc mi. Sed condimentum ipsum quis aliquam hendrerit. Aliquam erat volutpat. Mauris blandit orci sit amet arcu tincidunt, at semper risus sodales. Aliquam lacinia mi a sodales fermentum. Sed suscipit commodo rutrum. Fusce at cursus mi.
-
-            Vestibulum malesuada posuere sollicitudin. Morbi at augue consequat, dignissim dui eu, vestibulum quam. Vivamus nisl massa, maximus ac lacus a, pulvinar rutrum nulla. Integer vehicula tortor eget justo tristique, sed interdum felis scelerisque. Curabitur vehicula vulputate velit ac aliquam. Fusce rhoncus at metus sed lobortis. In pulvinar consequat nibh, vel luctus felis euismod nec. Quisque faucibus pretium efficitur. Suspendisse mattis purus quis nibh cursus, nec vestibulum ligula tempor.
-
-
           </div>
         </div>
         <!-- / ??? -->
