ajoute le support pour bower

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,22 +11,19 @@
   <title>Wally</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="../../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Material Design fonts -->
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Material Design -->
-  <link rel="stylesheet" type="text/css" href="../../../node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.css">
-  <link rel="stylesheet" type="text/css" href="../../../node_modules/bootstrap-material-design/dist/css/ripples.min.css">
+  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css">
+  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap-material-design/dist/css/ripples.min.css">
   <!-- Custom styles -->
   <link href="./content/css/main.css" rel="stylesheet">
 
   <!-- JQuery -->
-  <script src="../../../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <!-- Bootstrap core JS -->
-  <script src="../../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <!-- bootstrap Material core JS -->
-  <script src="../../../node_modules/bootstrap-material-design/dist/js/material.min.js"></script>
+  <script src="../bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
   <!-- Init bootstrap material js -->
   <script>$.material.init();</script>
 </head>
