ajoute c3js et des graphiques d'exemple

--- a/webapp/app/variation/variation.html
+++ b/webapp/app/variation/variation.html
@@ -1,12 +1,8 @@
 <!-- Prices graph -->
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <span class="glyphicon glyphicon-scale" />
-          </div>
-
-          <div class="panel-body">
-            Évolution des prix des stocks
-          </div>
-        </div>
-        <!-- / Prices graph -->
-      </div>
+<div class="panel panel-primary">
+  <div class="panel-body">
+    <div id="chart" ng-init="showChart()"></div>
+  </div>
+</div>
+<!-- / Prices graph -->
+</div>
