--- a/webapp/app/graph/graph.html
+++ b/webapp/app/graph/graph.html
@@ -1,7 +1,7 @@
 <!-- graphs -->
 <div class="panel panel-default">
   <div class="panel-body">
-    <img src="http://i1-scripts.softpedia-static.com/screenshots/D3-js_7.png" width="500" />
+    <div id="graph" ng-init="showGraph()" ></div>
   </div>
 </div>
 <!-- / graphs -->
