--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,27 +10,26 @@
 
   <title>Wally</title>
 
-  <!-- Bootstrap core CSS -->
   <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Bootstrap Material Design -->
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css">
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap-material-design/dist/css/ripples.min.css">
+  <link href="../bower_components/c3/c3.min.css" rel="stylesheet">
+
   <!-- Custom styles -->
   <link href="./content/css/main.css" rel="stylesheet">
 
-  <!-- JQuery -->
+  <!-- vendor -->
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-  <!-- Angular -->
   <script src="../bower_components/angular/angular.min.js"></script>
   <script src="../bower_components/angular-route/angular-route.min.js"></script>
-  <!-- Bootstrap core JS -->
   <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <!-- bootstrap Material core JS -->
   <script src="../bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
+  <script src="../bower_components/d3/d3.min.js" charset="utf-8"></script>
+  <script src="../bower_components/c3/c3.min.js"></script>
   <!-- Init bootstrap material js -->
   <script>$.material.init();</script>
-
-  <!-- App -->
+i
+  <!-- App -->i
   <script src="app/app.module.js"></script>
   <script src="app/search/search.module.js"></script>
   <script src="app/search/search.controller.js"></script>
