split client and server dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -10,22 +10,22 @@
 
   <title>Wally</title>
 
-  <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.css">
-  <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap-material-design/dist/css/ripples.min.css">
-  <link href="/node_modules/c3/c3.min.css" rel="stylesheet">
+  <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css">
+  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap-material-design/dist/css/ripples.min.css">
+  <link href="/bower_components/c3/c3.min.css" rel="stylesheet">
 
   <!-- Custom styles -->
   <link href="./content/css/main.css" rel="stylesheet">
 
   <!-- vendor -->
-  <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="/node_modules/angular/angular.min.js"></script>
-  <script src="/node_modules/angular-route/angular-route.min.js"></script>
-  <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="/node_modules/bootstrap-material-design/dist/js/material.min.js"></script>
-  <script src="/node_modules/d3/d3.min.js" charset="utf-8"></script>
-  <script src="/node_modules/c3/c3.min.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/angular/angular.min.js"></script>
+  <script src="/bower_components/angular-route/angular-route.min.js"></script>
+  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
+  <script src="/bower_components/d3/d3.min.js" charset="utf-8"></script>
+  <script src="/bower_components/c3/c3.min.js"></script>
   <!-- Init bootstrap material js -->
   <script>$.material.init();</script>
 i
@@ -54,7 +54,7 @@ i
         <div ng-controller="Search">
           <search></search>
         </div>
-        <div ng-controller="Stock">
+        <div >
           <stock></stock>
         </div>
       </div>
