--- a/public/app/possessed/possessed.html
+++ b/public/app/possessed/possessed.html
@@ -1,5 +1,5 @@
 <!-- Possessed stock -->
-<div class="panel panel-primary">
+<div class="panel panel-primary" ng-controller="MyStocks">
   <div class="panel-heading">
     <span class="glyphicon glyphicon-th-list" />
   </div>
