--- a/public/app/search/search.html
+++ b/public/app/search/search.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary">
+<div class="panel panel-primary" ng-controller="Search">
 	<div class="panel-heading">
 		<span class="glyphicon glyphicon-search" />
 	</div>
@@ -6,18 +6,11 @@
 		<form class="col-sm-12" id="search-form">
 			<div class="form-group">
 				<label from="searchInput">Rechercher des actions</label>
-
-					<input type="text" class="form-control" id="searchInput" placeholder="exemple: 'yolo company'">
+					<input type="text" class="form-control" id="searchInput" placeholder="exemple: 'yolo company'" ng-model="toSearch" ng-change="onChange()">
 			</div>
 		</form>
-		<!-- Stock list -->
-		<h4>Résultat</h4>
-		<div class="col-sm-12">
-			<table class="table table-hover">
-				<tr><td>{{name}}</td></tr>
-				<tr><td>yolo</td></tr>
-				<tr><td>yolo</td></tr>
-			</table>
-		</div>
+		<hr/>
+		{{toSearch}}
+		<stocks list="stocks" />
 	</div>
 </div>
