--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <title>Wally</title>
 
   <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css">
+  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.min.css">
   <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap-material-design/dist/css/ripples.min.css">
   <link href="/bower_components/c3/c3.min.css" rel="stylesheet">
 
@@ -22,6 +22,7 @@
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="/bower_components/angular/angular.min.js"></script>
   <script src="/bower_components/angular-route/angular-route.min.js"></script>
+  <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
   <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
   <script src="/bower_components/d3/d3.min.js" charset="utf-8"></script>
@@ -29,20 +30,19 @@
   <!-- Init bootstrap material js -->
   <script>$.material.init();</script>
 i
-  <!-- App -->i
+  <!-- App -->
   <script src="app/app.module.js"></script>
-  <script src="app/search/search.module.js"></script>
+  <script src="app/services/stocks.service.js"></script>
   <script src="app/search/search.controller.js"></script>
   <script src="app/search/search.directive.js"></script>
-  <script src="app/possessed/possessed.module.js"></script>
   <script src="app/possessed/possessed.controller.js"></script>
   <script src="app/possessed/possessed.directive.js"></script>
-  <script src="app/variation/variation.module.js"></script>
   <script src="app/variation/variation.controller.js"></script>
   <script src="app/variation/variation.directive.js"></script>
-  <script src="app/graph/graph.module.js"></script>
   <script src="app/graph/graph.controller.js"></script>
   <script src="app/graph/graph.directive.js"></script>
+  <script src="app/stocks/stocks.directive.js"></script>
+
 
 </head>
 
@@ -51,11 +51,11 @@ i
   <div class="container-fluid page-content">
     <div class="row">
       <div class="col-sm-6" >
-        <div ng-controller="Search">
+        <div>
           <search></search>
         </div>
         <div >
-          <stock></stock>
+          <mystocks></mystocks>
         </div>
       </div>
       <div class="col-sm-6">
