user can now search a stock action by typing it's name

--- a/public/app/stocks/stocks.html
+++ b/public/app/stocks/stocks.html
@@ -1,6 +1,6 @@
 <div class="col-sm-12">
-  <table class="table table-condensed">
-    <thead>
+  <table ng-show="list.length > 0" class="table table-condensed">
+    <thead >
       <th>
         Symbole
       </th>
