--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@ i
   <!-- App -->
   <script src="app/app.module.js"></script>
   <script src="app/services/stocks.service.js"></script>
+  <script src="app/services/search.service.js"></script>
   <script src="app/search/search.controller.js"></script>
   <script src="app/search/search.directive.js"></script>
   <script src="app/possessed/possessed.controller.js"></script>
@@ -42,7 +43,6 @@ i
   <script src="app/graph/graph.controller.js"></script>
   <script src="app/graph/graph.directive.js"></script>
   <script src="app/stocks/stocks.directive.js"></script>
-
 
 </head>
 
@@ -54,7 +54,7 @@ i
         <div>
           <search></search>
         </div>
-        <div >
+        <div>
           <mystocks></mystocks>
         </div>
       </div>
