add ability to show posessed stock actions and update view when one is bought

--- a/public/app/search/search.html
+++ b/public/app/search/search.html
@@ -1,6 +1,6 @@
 <div class="panel panel-primary" ng-controller="Search">
 	<div class="panel-heading">
-		<span class="glyphicon glyphicon-search" />
+		 <i class="material-icons">search</i>
 	</div>
 	<div class="panel-body">
 		<form class="col-sm-12" id="search-form">
@@ -10,6 +10,6 @@
 			</div>
 		</form>
 		<hr/>
-		<stocks list="stocks" />
+		<stocks list="stocks" loading="loading" search="search" />
 	</div>
 </div>
