--- a/public/app/possessed/possessed.html
+++ b/public/app/possessed/possessed.html
@@ -1,16 +1,14 @@
 <!-- Possessed stock -->
 <div class="panel panel-primary" ng-controller="MyStocks">
   <div class="panel-heading">
-    <span class="glyphicon glyphicon-th-list" />
+     <i class="material-icons">list</i>
   </div>
-  <div class="panel-body">
+  <div class="panel-body" >
     <h3>Actions possédées</h3>
     <hr/>
-    <table class="table table-hover">
-      <tr><td>yolo</td></tr>
-      <tr><td>yolo</td></tr>
-      <tr><td>yolo</td></tr>
-    </table>
+    <div style="max-height: 25em;overflow-y: scroll;">
+      <stocks list="stocks" loading="loading" search="search" />
+    </div>
   </div>
 </div>
 <!-- / Possessed stock -->
