--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.min.css">
   <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap-material-design/dist/css/ripples.min.css">
   <link href="/bower_components/c3/c3.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
 
   <!-- Custom styles -->
   <link href="./content/css/main.css" rel="stylesheet">
@@ -43,6 +45,7 @@ i
   <script src="app/graph/graph.controller.js"></script>
   <script src="app/graph/graph.directive.js"></script>
   <script src="app/stocks/stocks.directive.js"></script>
+  <script src="app/stocks/stocks.controller.js"></script>
 
 </head>
 
