--- a/public/app/stocks/stocks.html
+++ b/public/app/stocks/stocks.html
@@ -10,18 +10,19 @@
       <th>
         Prix (USD)
       </th>
+      <th ng-show="!search">
+        Date d'achat
+      </th>
     </thead>
     <tbody ng-repeat="stock in list" >
       <tr>
-        <td class="col-sm-3">{{stock.symbol}}</td>
-        <td class="col-sm-4">{{stock.name}}</td>
-        <td class="col-sm-2">{{stock.price}}</td>
+        <td class="col-sm-2">{{stock.symbol}}</td>
+        <td class="col-sm-3">{{stock.name}}</td>
+        <td class="col-sm-1">{{stock.price}}</td>
+        <td ng-show="!search" class="col-sm-3">{{stock.dateAdded}}</td>
         <td class="col-sm-3">
-          <button class="btn btn-success" ng-click="buy(stock)" ng-show="search">
+          <button class="btn btn-success" ng-click="buy(stock)">
             Acheter
-          </button>
-          <button class="btn btn-info" ng-show="!search" >
-            <i class="material-icons">timeline</i>
           </button>
         </td>
       </tr>
