doing some cleaning

--- a/public/app/graph/graph.html
+++ b/public/app/graph/graph.html
@@ -1,11 +1,11 @@
 <!-- graphs -->
-<div class="panel panel-info">
+<div class="panel panel-info" ng-controller="Graph">
   <div class="panel-heading">
     <h3 class="panel-title">
       Achats de cette année
     </h3>
-	</div>
-  <div class="panel-body" id="calendarPanelBody" >
+  </div>
+  <div class="panel-body" id="calendarPanelBody">
     <div ng-show="noData" id="noData">
       <i class="material-icons">not_interested</i>
       <br>
