--- a/public/app/variation/variation.html
+++ b/public/app/variation/variation.html
@@ -1,5 +1,5 @@
 <!-- Prices graph -->
-<div class="panel panel-primary">
+<div class="panel panel-primary" ng-controller="Variation">
   <div class="panel-body">
     <div id="chart" ng-init="showChart()"></div>
   </div>
