--- a/public/app/search/search.html
+++ b/public/app/search/search.html
@@ -1,12 +1,12 @@
 <div class="panel panel-primary" ng-controller="Search">
 	<div class="panel-heading">
-		 <i class="material-icons">search</i>
+		<i class="material-icons">search</i>
 	</div>
 	<div class="panel-body">
 		<form class="col-sm-12" id="search-form">
 			<div class="form-group">
 				<label from="searchInput">Rechercher des actions</label>
-				<input type="text" class="form-control" id="searchInput" placeholder="exemple: 'yolo company'" ng-model="toSearch" ng-change="onChange()">
+				<input type="text" class="form-control" id="searchInput" placeholder="exemple: 'GOOG'" ng-model="toSearch" ng-change="onChange()">
 			</div>
 		</form>
 		<hr/>
