--- a/public/index.html
+++ b/public/index.html
@@ -58,10 +58,12 @@
       <div class="col-sm-6">
         <graph></graph>
         <variation></variation>
+        <div class="well text-muted">
+          Guillaume DENIS 2017
+        </div>
       </div>
     </div>
   </div>
   </div>
 </body>
-
 </html>
