Handle change in stock list when a stock is sold

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   <script src="app/app.module.js"></script>
   <script src="app/services/stocks.service.js"></script>
   <script src="app/services/search.service.js"></script>
+  <script src="app/services/wallet.service.js"></script>
   <script src="app/search/search.controller.js"></script>
   <script src="app/search/search.directive.js"></script>
   <script src="app/possessed/possessed.controller.js"></script>
@@ -63,7 +64,6 @@
         </div>
       </div>
     </div>
-  </div>
   </div>
 </body>
 </html>
